# trp_practice

Algorithm/: app.py
Dialog/: app.py
Doxygen/: Doxyfile  main.cpp
Doxygen/docs/html/: files.html  globals.html  globals_func.html  index.html  main_8cpp.html
Doxygen/docs/latex/: main_8cpp.tex  refman.tex
Jupyter Notebook, Python libs/: example.ipynb
Jupyter Notebook, Python libs/.ipynb_checkpoints/: example-checkpoint.ipynb
MarkupLanguages/: index.html  recipe.json  recipe.xml  script.js  styles.css
OpenMP+OpenCL/OpenCl/: CMakeLists.txt  main.cpp
OpenMP+OpenCL/OpenMP/: main.cpp
Sheets/: app.py  company_data.xlsx  projects.db
exampleAPI/: index.html
exampleDictionary/: app.py
exampleInternationalization/: index.html  script.js  styles.css
exampleMACRO/: main.c
exampleMVC/: app.py
exampleMVC/app/: models.py
exampleMVC/templates/: index.html
interprocessСommunication/: client.py  server.py
regex/: app.py
visualisation/: app.py
Пакетные менеджеры/matrixExample/: CMakeLists.txt  main.cpp
Пакетные менеджеры/saveVideoExample/: main.py
